[WebGPU] idl CTS test is failing https://bugs.webkit.org/show_bug.cgi?id=267443 <radar://120887247>

Reviewed by Tadeu Zagallo.

The idl for some of the error messages has changed slightly since
the last CTS test update. Update the CTS tests and idl to the latest
version of the specification.

* LayoutTests/http/tests/webgpu/webgpu/idl/constants/flags.spec.js:
(g.test.string_appeared_here.fn):
(Object.keys.kBufferUsageExp.fn):
(Object.keys.kTextureUsageExp.fn):
(Object.keys.kColorWriteExp.fn):
(Object.keys.kShaderStageExp.fn):
* LayoutTests/http/tests/webgpu/webgpu/idl/exposed.html.js:
* LayoutTests/http/tests/webgpu/webgpu/idl/idl_test.js:
(export.IDLTest):
* LayoutTests/http/tests/webgpu/webgpu/idl/constructable.html: Added.
* LayoutTests/http/tests/webgpu/webgpu/idl/constructable.spec.js: Added.
(string_appeared_here.fn):
(pipelineErrorOptions.fn):
(g.test.string_appeared_here.desc.string_appeared_here.fn):
* LayoutTests/http/tests/webgpu/cts-chunked2sec.https.html:
* LayoutTests/http/tests/webgpu/cts.https.html:
* LayoutTests/http/tests/webgpu/webgpu/listing.js
:Update CTS tests.

* Source/WebCore/Modules/WebGPU/GPUOutOfMemoryError.h:
(WebCore::GPUOutOfMemoryError::create):
(WebCore::GPUOutOfMemoryError::message const):
(WebCore::GPUOutOfMemoryError::GPUOutOfMemoryError):
* Source/WebCore/Modules/WebGPU/GPUOutOfMemoryError.idl:
* Source/WebCore/Modules/WebGPU/GPUPipelineError.idl:
Update interfaces.

Canonical link: https://commits.webkit.org/273163@main